# yt-downloader

./: .gitignore  package-lock.json  package.json
.github/workflows/: azure-static-web-apps-calm-ocean-037cd7200.yml  deploy-b2.yml  main_yt-down-be.yml  server-cd.yml  yt-down-be-AutoDeployTrigger-81335878-9f95-4d57-90a8-eea32ff280bc.yml  yt-down-be-AutoDeployTrigger-b62d485e-b3a6-40e3-acbd-888c1d472a33.yml
client/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: App.tsx  main.tsx  style.css
client/src/api/: api.ts  youtube.ts
client/src/components/: AnimatedBackground.tsx  ThemeToggle.tsx  VideoForm.tsx  VideoMetadata.tsx
client/src/helpers/: ThemeContext.tsx  theme.ts  validation.ts
server/: .dockerignore  .env  Dockerfile  authenticator.ts  constants.ts  index.ts  logger.ts  package-lock.json  package.json  tsconfig.json
server-py/: Dockerfile  README.md  constants.py  logger.py  main.py  pyproject.toml  setup.py
server-py/.github/: copilot-instructions.md
server-py/controllers/: video.py
server-py/routes/: index.py
server-py/services/: session.py  youtube.py
server/controllers/: video.ts
server/routes/: index.ts
server/services/: session.ts  youtube.ts
