[project]
name = "youtube_video_downloader"
version = "0.1.0"
description = "A FastAPI server to download YouTube videos using yt-dlp."
authors = [{name ="Nishant"}]
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "yt-dlp"
]

[tool.pdm]
# If you use PDM, otherwise ignore
